# brainsait-ai-automation

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  git-setup.sh  pyproject.toml  setup.sh  wrangler.jsonc
.github/workflows/: deploy-cloudflare.yml  pages.yml
docs/: GITHUB_PAGES_SETUP.md  architecture.md  index.html
docs/ar/: guides.html  index.html  tutorials.html
docs/deployment/: cloudflare-setup.md
docs/landing/: index.html
skill-folders-repository/: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  README.md  deploy.sh  package-lock.json  package.json  wrangler.toml
skill-folders-repository/01-legal-auditor-compliance/: README.md
skill-folders-repository/01-legal-auditor-compliance/01-regulatory-knowledge-base/: eu-ai-act-interpretation.md
skill-folders-repository/02-cyber-guardian-mdr/: README.md
skill-folders-repository/04-healthcare-insurance-saudi/01-regulatory-compliance-saudi/: SKILL.md
skill-folders-repository/specs/: saudi-healthcare-regulatory-compliance.spec.md
skill-folders-repository/src/: index.js  stripe-identity.js
skill-folders-repository/test/: simple-test.js  stripe-identity.test.js
src/brainsait_ai/: __init__.py  cli.py  config.py  logging_utils.py
src/brainsait_ai/ai/: __init__.py  client.py
src/brainsait_ai/enrichment/: __init__.py  web_crawler.py
src/brainsait_ai/features/: __init__.py  engineering.py
src/brainsait_ai/utils/: http.py  (+1 more)
tests/: __init__.py  conftest.py  test_cli.py  test_offers.py  test_scoring.py
(+17 files in other folders)
